add half of images